# master-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml  build.zig  build.zig.zon  install.sh  install_local.sh  readme.md
old/: .gitignore  Cargo.toml
old/src/: setup_logger.rs
old/src/common/: edit_toml_template.rs  ensure_parent_dir.rs  exit_with_errors.rs  mod.rs  remove_toml_comments.rs  run.rs
old/src/config/: config_path.rs  get.rs  mod.rs  names.rs  write.rs
old/src/git/: commands.rs  match_command.rs  mod.rs
old/src/term/: match_command.rs  mod.rs
src/: args.rs  cache.zig  cli.rs  commands.rs  git_commands.rs  help.zig  main.rs  main.zig  setup_logger.rs  tests.zig  types.zig  validate_profile_set.rs
src/common/: arg_parser.zig  constants.zig  environment.zig  exit_with_error.rs  exit_with_errors.rs  help.zig  log.zig  message.rs  mod.rs  parse_toml_string.rs  run.rs  run_command.zig  str_vec_to_string_vec.rs  types.zig  validate.rs
src/common/traits/: as_string_vec.rs  command_input_from_string.rs  mod.rs
src/config/: config_path.rs  constants.zig  current_profile.rs  get.rs  get_or_default.rs  mod.rs  model.rs  names.rs  parse.rs  read.rs  read.zig  setup.rs  types.zig  validate.rs  write.zig
src/config/ensure_default/: create_default.rs  mod.rs
src/config/get_or_default/: create_default.rs  get.rs  mod.rs  (+1 more)
src/embedded/: mod.rs
src/git/: handle.zig  match_command.rs  mod.rs  types.zig
src/profile/: commands.rs  handle.zig  match_command.rs  mod.rs  types.rs  types.zig
src/term/: commands.rs  match_command.rs  mod.rs
static/: settings.toml
(+89 files in other folders)
