[package]
name = "master_maker"
version = "0.0.1"
edition = "2021"
authors = ["Mihai Miuta <miuta.mihai@gmail.com>"]
description = "CLI to handle a master maker's common tasks"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.19"
